--- a/js/ch14/quiz1.html
+++ b/js/ch14/quiz1.html
@@ -24,7 +24,7 @@
       var i = 1;
       var j = 1;
       //이걸 안써주면 아예 계산이 안 되고..
-      //j를 선언하고 값을 1을 이때 주지 않으면 1단 계산이 안 됨..
+      //j를 선언하고 값을 1을 이때 주지 않으면 1단 계산이 안 됨.. 왜냐면, undefined이기 때문에..
       while (i < 10) {
         document.write("<div>");
         document.write("<h3>" + i + "단</h3>");
@@ -38,12 +38,14 @@
         i++;
         j = 1;
         //이거 안 써주면 1단만 계산됨..
+        //while문 내부랑 while문 바깥에 써준 값을 구분하자!!
       }
 
       //   var i = 1;
       //   var j = 1;
       //   대입은 반드시 해줘야함! 선언 필수!
       //   while (i >= 1 && i < 10) {
+      //var i = 1 ; 선언했는데 굳이 또 이 값을 줄 이유가 없지 않나??
       //     document.write("<div>");
       //     document.write("<h3>" + i + "단</h3>");
 
@@ -58,15 +60,6 @@
 
       //   var i = 1;
       //   var j = 1;
-
-      //   while (i >= 1 && i < 10) {
-      //     while (j >= 1 && j < 10) {
-      //       document.write(i + "x" + j + "=" + i * j + "<br/>");
-      //       j++;
-      //     }
-      //     i++;
-      //     j = 1;
-      //   }
     </script>
   </body>
 </html>
