--- a/연습.html
+++ b/연습.html
@@ -6,18 +6,17 @@
     <title>Document</title>
   </head>
   <body>
-    <script>
-      let output = "";
-
-      for (let i = 0; i < 9; i++) {
-        for (let j = 1; j < i + 1; j++) {
-          output += j;
-        }
-        output += "\n";
-      }
-
-      console.log(output);
-      document.write(output);
-    </script>
+    <!-- 사칙연산 다시  -->
+    <input type="number" id="number1" />
+    <select id="select">
+      <option>+</option>
+      <option>-</option>
+      <option>*</option>
+      <option>/</option>
+    </select>
+    <input type="number" id="number2" />
+    <button id="btn">계산</button>
+    <div id="result"></div>
+    <script></script>
   </body>
 </html>
