--- a/js/bootstrap/test4.html
+++ b/js/bootstrap/test4.html
@@ -8,16 +8,15 @@
     <script src="./library_bootstrap/js/bootstrap.bundle.js"></script>
   </head>
   <body>
-    <div class="ccontainer">
+    <div class="container">
+      <!-- ccotainer로 오타났었음.. -->
       <div class="row">
         <!-- offset-md-0도 반응형으로 적용 가능하다..
         12칸에서의 앞뒤, 중간의 여백인데
     어느 브레이크 포인트에서는 적용되고 적용되지 않게 할 수 있다..
     sm 설정을 하면 그 이상에 다 영향을 주기 때문에 md 값에 주고 그 이상에 영향을 안주게 할 수 있음.. -->
-        <div class="col-sm-5 col-md-6 border">colunm</div>
-        <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0 border">
-          colunm
-        </div>
+        <div class="col-sm-5 col-md-6 border">내용</div>
+        <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0 border">내용</div>
       </div>
 
       <!-- clearfix 나머지 칼럼을 다 차지해 그 다음의 구성요소가 다음줄에 나오게 
