--- a/js/bootstrap/test6.html
+++ b/js/bootstrap/test6.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
+    <!-- i태그를 사용할 때 아이콘을 사용하기 위한 cdn은 필수!! -->
     <!-- css class명으로 할 때 맨아래의 link -->
   </head>
   <body>
