--- a/js/js_browserFuntion/quiz6.html
+++ b/js/js_browserFuntion/quiz6.html
@@ -34,6 +34,7 @@
             let result = xhr.responseText;
             result = JSON.parse(result);
             let row = result["culturalSpaceInfo"]["row"];
+            //여기 실수!! json 파일 잘 보기
 
             let resultTxt = "";
             for (let i = 0; i < row.length; i++) {
@@ -61,6 +62,7 @@
               `;
 
               placeInfo.innerHTML = resultTxt;
+              //여기 실수
             }
           };
 
