--- a/js/ch17/quiz4.html
+++ b/js/ch17/quiz4.html
@@ -33,6 +33,8 @@
         //두 숫자를 뽑아 온 다음, 밑에는 사칙연산을 뽑아오기
         let selectNode = document.getElementById("select");
         let selectValue = selectNode.options[selectNode.selectedIndex].value;
+
+        //***여기서 내가 자꾸 틀리는게 selectNode.selectedIndex 사이에 점인데 콤마 찍음..
         // let selectValue = document.getElementById("select").options[selectNode.selectedIndex].value
         //이것은 안 되네..
         //이게 select의 옵션값을 가져오는 식(나는 모름...)
