--- a/연습.html
+++ b/연습.html
@@ -17,6 +17,37 @@
     <input type="number" id="number2" />
     <button id="btn">계산</button>
     <div id="result"></div>
-    <script></script>
+    <script>
+      let btn = document.getElementById("btn");
+      btn.addEventListener("click", calc);
+      let num1 = parseInt(document.getElementById("number1").value);
+      let num2 = parseInt(document.getElementById("number2").value);
+      let selectNode = document.getElementById("select");
+      let selectValue = selectNode.options[selectNode.selectedIndex].value;
+
+      function calc() {
+        //let num1 = parseInt(document.getElementById("number1").value);
+        //let num2 = parseInt(document.getElementById("number2").value);
+        //let selectNode = document.getElementById("select");
+        //let selectValue = selectNode.options[selectNode.selectedIndex].value;
+        //selectNode.selectedIndex
+        let result;
+        switch (selectValue) {
+          case "+":
+            result = num1 + num2;
+            break;
+          case "-":
+            result = num1 - num2;
+            break;
+          case "*":
+            result = num1 * num2;
+            break;
+          case "/":
+            result = num1 / num2;
+            break;
+        }
+        document.getElementById("result").innerHTML = result;
+      }
+    </script>
   </body>
 </html>
