--- a/node/ch6/lab5-static/public/index.html
+++ b/node/ch6/lab5-static/public/index.html
@@ -22,5 +22,6 @@ http://localhost:3000/test.js
     <p>hello world</p>
     <button id="button">click me</button>
     <a href="/dynamic">dynamic</a>
+    <!-- 사용자가 이 링크를 클릭하면 "/dynamic" 경로로 이동하게 됩니다. -->
   </body>
 </html>
