--- a/수업note..html
+++ b/수업note..html
@@ -68,4 +68,68 @@ Content-Encoding: 응답 본문의 압축 방법을 나타냅니다.<br />
 ---------------------------------------------------Location: '/': 이 부분은
 리다이렉션을 의미합니다. 클라이언트가 요청한 페이지가 다른 위치로 이동해야 할 때
 사용됩니다. 여기서는 클라이언트를 루트 경로('/')로 리다이렉션하도록 설정되어
-있습니다.
+있습니다. --------------------------------------------------- 먼저, Express
+애플리케이션은 요청(request)이 발생하면 이를 처리하기 위해 여러 단계의 함수들이
+차례로 실행되는데, 이때 사용되는 개념이 "미들웨어"와 "라우터"입니다. 미들웨어는
+Express 애플리케이션에서 요청과 응답 사이에 위치하며, 요청과 응답을 처리하거나
+조작하는 함수입니다. 각각의 미들웨어 함수는 요청 객체 (req), 응답 객체 (res),
+그리고 다음 미들웨어로 제어를 전달하기 위한 next 콜백 함수를 인자로 받습니다.
+미들웨어 함수의 주요 역할: 요청 전처리: 요청에 대한 검증, 로깅 등의 작업을
+수행할 수 있습니다. 응답 후처리: 응답 데이터를 가공하거나 추가 작업을 수행할 수
+있습니다. next()를 호출하여 다음 미들웨어로 흐름을 전달합니다. 라우터는
+Express에서 특정 경로에 대한 요청을 처리하는 미들웨어의 그룹입니다. 즉, 특정
+경로에 도달했을 때 어떤 동작을 수행할지를 정의하는 데 사용됩니다. 라우터의 주요
+역할: 특정 경로에 대한 미들웨어를 등록하여 해당 경로의 요청을 처리합니다. 여러
+개의 라우터를 생성하여 코드를 모듈화하고 유지보수성을 높일 수 있습니다.
+---------------------------------------------------morgan은 Node.js 웹
+애플리케이션의 로깅 미들웨어입니다. HTTP 요청에 대한 정보를 콘솔이나 로그 파일에
+기록하여 애플리케이션의 동작을 추적하고 디버깅하는 데 도움이 됩니다. 주로 개발
+중에 사용되며, 클라이언트의 요청과 서버의 응답에 대한 정보를 기록할 수 있습니다.
+morgan('dev')에서 'dev'는 미들웨어의 로그 포맷을 지정하는 옵션입니다. 'dev'
+옵션은 개발 환경에서 자주 사용되며, 응답 시간, 상태 코드, 요청 메서드, 요청 URL
+등의 정보를 포함한 간결한 형식으로 로그를 생성합니다.
+---------------------------------------------------249페이지 코드 resave: 세션
+데이터가 변경되지 않았더라도 항상 저장할지 여부를 결정합니다. false로 설정하면
+성능이 향상됩니다. saveUninitialized: 초기화되지 않은 세션을 저장할지 여부를
+결정합니다. false로 설정하면 초기화되지 않은 세션은 저장되지 않습니다. secret:
+세션을 서명하기 위한 비밀 키입니다. 세션 데이터를 안전하게 유지하기 위해
+사용됩니다. 보안상 중요한 값이므로 환경 변수로부터 가져오도록 되어 있습니다.
+cookie.httpOnly: 클라이언트에서 쿠키를 확인 및 수정할 수 있는 권한을 제한하기
+위해 httpOnly 속성을 설정합니다. cookie.secure: HTTPS 프로토콜을 통해 통신할
+때만 쿠키를 전송하도록 설정합니다. 보안 강화를 위한 옵션입니다. name: 세션
+쿠키의 이름을 지정합니다. ---------------------------------------------------
+//>npx nodemon app.js //[nodemon] app crashed - waiting for file changes before
+starting... 대부분 단순 오타일때 발생(나같은경우) //lab9로 다시 확인해보기!!
+--------------------------------------------------- ch6 - lab7 -
+loginForm.html에서 regex=> (^|;): 문자열의 시작 또는 세미콜론 (;) 문자로
+시작하는 패턴입니다. ?: 세미콜론 이후의 공백을 포함할 수도 있고 없을 수도
+있습니다. name: 전달된 이름 변수에 해당하는 쿠키 이름을 의미합니다. =: 등호 (=)
+문자 다음에 오는 패턴입니다. ([^;]*): 세미콜론을 제외한 모든 문자열을 나타내는
+패턴입니다. (;|$): 세미콜론 또는 문자열의 끝으로 끝나는 패턴입니다.
+--------------------------------------------------- flags: "a"는 Node.js의
+fs.createWriteStream 메서드에서 사용되는 옵션 중 하나로, 파일을 열 때 어떤
+작업을 수행할지를 지정합니다. 여기서 "a"는 "append"를 나타내며, 기존 파일에
+이어서 쓰기를 수행하는 옵션입니다. 각각의 flags 옵션은 파일 열기 동작을
+나타내며, 일반적으로 다음과 같은 값들을 가질 수 있습니다: "r": 읽기 모드 (read)
+"w": 쓰기 모드 (write), 기존 파일 내용을 지우고 새로 씀 "a": 이어쓰기 모드
+(append), 파일이 존재하면 파일 끝에서부터 이어서 씀 "r+": 읽기와 쓰기 모드 (read
+and write) "w+": 읽기와 쓰기 모드, 기존 파일 내용을 지우고 새로 씀 "a+": 읽기와
+이어쓰기 모드 따라서 flags: "a"로 설정된 경우, 파일이 이미 존재하면 파일
+끝에서부터 이어서 쓰게 됩니다. 만약 파일이 존재하지 않으면 새로운 파일이
+생성되어 이어쓰기 모드로 열립니다.
+---------------------------------------------------"/" (루트 경로): "/"는
+애플리케이션의 루트 경로를 나타냅니다. 이 경로는 애플리케이션에 접근하는 기본
+경로로 사용되며, 대부분의 웹 사이트에서는 루트 경로에서 홈 페이지가 제공됩니다.
+예를 들어, http://example.com/은 루트 경로에 해당합니다. "/about" (about 경로):
+"/about"은 애플리케이션 내에서 "about"이라는 특정 경로를 나타냅니다. 이 경로는
+사용자가 애플리케이션에서 "about" 페이지로 이동하기 위해 사용될 수 있습니다.
+예를 들어, http://example.com/about은 "/about" 경로에 해당합니다.
+--------------------------------------------------- 동적인 데이터를
+클라이언트에게 전송하는 메서드로는... res.send(data): res.send() 메서드는 다양한
+데이터 타입을 클라이언트에게 전송할 수 있는 범용적인 메서드입니다. 텍스트, HTML,
+JSON, 버퍼, 그림 파일 등 다양한 종류의 데이터를 전송할 수 있습니다.
+혹은,,,res.json(data): res.json() 메서드는 JSON 형식의 데이터를 클라이언트에게
+전송합니다. 주로 객체나 배열과 같은 자바스크립트 객체를 JSON 형식으로 변환하여
+전송합니다.이외에도 res.render() 등의 메서드도 사용될 수 있습니다. 선택한
+메서드는 전송하려는 데이터의 형태와 클라이언트에서의 처리 방식에 따라
+결정됩니다.
