--- a/node/ch6/lab9-multer/index.html
+++ b/node/ch6/lab9-multer/index.html
@@ -13,9 +13,11 @@
       method="post"
       enctype="multipart/form-data"
     >
+      <!--이 인코딩은 폼 데이터를 여러 부분으로 나누어 각 부분을 독립적으로 인코딩하고, 그 결과를 하나의 메시지로 결합하여 서버로 보냅니다. 이를 통해 텍스트 데이터뿐만 아니라 이진 파일(예: 이미지, 동영상 등)과 같은 바이너리 데이터도 함께 전송할 수 있습니다.  -->
       <!-- 알아서 파일 탐색창 지원, 원한다면 type=text로 다른 입력 데이터 같이 넘겨도 됨
         multer에서 지원함 -->
       <input type="file" name="file1" />
+      <!--  서버로 데이터를 전송할 때, 서버 측에서 해당 입력 필드의 값을 식별하는 데 사용됩니다.  -->
       <button type="submit" value="업로드"></button>
     </form>
   </body>
